# pastabin

./: .gitignore  Cargo.toml  build  esbuild.config.js  license  package-lock.json  package.json  postinstall  readme.md  targets.txt
.github/workflows/: main.yml
data/: pastas.json
lib/crypto/: Cargo.toml  index.ts  package-lock.json  package.json
lib/crypto/src/: lib.rs
src/: errors.rs  global.d.ts  html.ts  index.ts  main.rs
src/app/: App.svelte  NaviButton.svelte  Navigator.svelte  app.ts  create.svelte  error.svelte  esbuild.config.js  index.html  index.svelte  navigator.svelte  package-lock.json  package.json  pasta.svelte  vite.config.js
src/app/src/: App.svelte  Create.svelte  Index.svelte  Navigator.svelte  Pasta.svelte  Status.svelte  app.ts  routes.ts  utils.ts
src/app/src/style/: app.css
src/routes/: api.rs  api.ts  app.rs  app.ts  index.ts  mod.rs  status.ts
src/utils/: dataStore.ts  randomBytes.ts  randomBytesWeb.ts  uniqueId.ts
src/wasm/: .gitignore  Cargo.toml  core.ts  index.ts  readme.md  web.ts
src/wasm/src/: lib.rs
