[package]
name = "crypto"
version = "0.1.0"
authors = ["Sueqkjs <sueqk@outlook.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
aes-gcm = "0.8"