[package]
name = "crypto"
version = "0.1.0"
authors = ["Sueqkjs <sueqk@outlook.jp>"]
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
aes-gcm = "0.8"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand_chacha = "0.3.1"
rand = "0.8.4"
